--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -95,26 +95,27 @@ jobs:
 
       - name: Test full project
         run: python manage.py test
-deploy:
-  runs-on: ubuntu-latest
-  needs: [ test-all ]
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ test-all ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.12"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Deploy to production server via SSH
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        script: |
-          whoami
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Deploy to production server via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{secrects.KEY}}
+          script: |
+            whoami
