--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -114,8 +114,8 @@ jobs:
       - name: Deploy to production server via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
           key: ${{secrets.KEY}}
           script: |
             whoami
