--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,37 @@
 asgiref==3.8.1
+beautifulsoup4==4.13.4
 black==25.1.0
+certifi==2025.4.26
+chardet==3.0.4
+charset-normalizer==3.4.2
 click==8.2.0
 crispy-bootstrap5==2025.4
+deep-translator==1.11.4
 Django==5.2.1
 django-crispy-forms==2.4
 django-jazzmin==3.0.1
 Faker==37.3.0
 gunicorn==23.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+polib==1.2.0
 python-dotenv==1.1.0
+requests==2.32.3
+rfc3986==1.5.0
+sniffio==1.3.1
+soupsieve==2.7
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.2
+urllib3==2.4.0
 whitenoise==6.9.0
